src/tests/snapshots/niri__tests__window_opening__check_target_size@omT-ofT-dhF500-t.snap
---
source: src/tests/window_opening.rs
description: "open maximized: true\nopen floating: true\ndefault window height: F500\ntabbed"
expression: snapshot
---
initial configure:
size: 0 × 500, bounds: 1280 × 720, states: []

post-map configures:
size: 1 × 1, bounds: 1280 × 720, states: [Activated]
